add bootstrap and email activation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,11 @@ spring.datasource.password=1234
 spring.freemarker.expose-request-attributes=true
 spring.freemarker.suffix=.ftl
 
-upload.path=C:/projects/sweater/uploads
+upload.path=/C:/projects/sweater/uploads
+
+spring.mail.host=smtp.yandex.ru
+spring.mail.username=sg102kvs@ya.ru
+spring.mail.password=310819851239645
+spring.mail.port=465
+spring.mail.protocol=smtps
+mail.debug=true
