add captcha, db migration, remember me, validate form

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
-spring.jpa.generate-ddl=true
-spring.datasource.url=jdbc:postgresql://localhost/db_example
+spring.jpa.generate-ddl=false
+spring.datasource.url=jdbc:postgresql://localhost/sweater
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.freemarker.expose-request-attributes=true
 spring.freemarker.suffix=.ftl
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=validate
+
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.table-name=SPRING_SESSION
 
 upload.path=/C:/projects/sweater/uploads
 
@@ -13,3 +18,5 @@ spring.mail.password=310819851239645
 spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=true
+
+recaptcha.secret=6LctA88UAAAAAHFWLh6AZFqMFwmas5JNQ16XNpl9
